rnsc/test_data/rns_integration/error/parser/flags_sub_directive/trailing_tokens_recovers.rns
; Tests that parser continues after trailing tokens and reports subsequent errors
; Expected errors: E-041 (trailing tokens), E-037 (unexpected token)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .flags public trailing

    unknown_token ; <- E-037
.inner_classes_attr_end

.class_end
